Enable preview in surefire plugin